--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <div class="u-repeater u-repeater-1">
             <div class="u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-container-layout-1">
-                <img alt="" class="u-expanded-width u-image u-image-default u-image-1" data-image-width="1454" data-image-height="1080" src="images/bathtwo.jpg">
+                <img alt="" class="u-expanded-width u-image u-image-default u-image-1" data-image-width="1454" data-image-height="1080" src="bathtwo.jpg">
                 <h3 class="u-text u-text-default u-text-1">History</h3>
                 <p class="u-text u-text-2">Learn more about the history of Bath</p>
                 <a href="" class="u-active-none u-border-2 u-border-hover-palette-2-base u-border-palette-2-light-1 u-btn u-button-style u-hover-none u-none u-text-body-color u-btn-1">learn more</a>
@@ -58,7 +58,7 @@
             </div>
             <div class="u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-container-layout-2">
-                <img alt="" class="u-expanded-width u-image u-image-default u-image-2" data-image-width="1024" data-image-height="768" src="images/baththree.jpg">
+                <img alt="" class="u-expanded-width u-image u-image-default u-image-2" data-image-width="1024" data-image-height="768" src="baththree.jpg">
                 <h3 class="u-text u-text-default u-text-3">Attractions</h3>
                 <p class="u-text u-text-4">Explore the city of Bath</p>
                 <a href="" class="u-active-none u-border-2 u-border-hover-palette-2-base u-border-palette-2-light-1 u-btn u-button-style u-hover-none u-none u-text-body-color u-btn-2">learn more</a>
@@ -66,7 +66,7 @@
             </div>
             <div class="u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-container-layout-3">
-                <img alt="" class="u-expanded-width u-image u-image-default u-image-3" data-image-width="500" data-image-height="334" src="images/bathfour.jpg">
+                <img alt="" class="u-expanded-width u-image u-image-default u-image-3" data-image-width="500" data-image-height="334" src="bathfour.jpg">
                 <h3 class="u-text u-text-default u-text-5">Accommodation</h3>
                 <p class="u-text u-text-6">Book your accommodation today!</p>
                 <a href="" class="u-active-none u-border-2 u-border-hover-palette-2-base u-border-palette-2-light-1 u-btn u-button-style u-hover-none u-none u-text-body-color u-btn-3">learn more</a>
@@ -92,7 +92,7 @@
                   <input type="email" placeholder="Enter a valid email address" id="email-a736" name="email" class="u-input u-input-rectangle u-palette-1-light-2 u-radius-12" required="">
                 </div>
                 <div class="u-form-group u-form-message">
-                  <label for="message-a736" class="u-label">Message</label>
+                  <label for="message-a736" class="u-label">Query</label>
                   <textarea placeholder="Enter your message" rows="4" cols="50" id="message-a736" name="message" class="u-input u-input-rectangle u-palette-1-light-2 u-radius-12" required=""></textarea>
                 </div>
                 <div class="u-align-left u-form-group u-form-submit">
