--- a/index.html
+++ b/index.html
@@ -43,6 +43,17 @@
           </div>
         </div>
       </div>
+      <header>
+        <div class="logo"><a href="#"><img src="img/Bath_Bound_logo.svg" width="100px" height="100px"></a></div>
+        <nav class="nav">
+            <ul>
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">HISTORY</a></li>
+                <li><a href="#">ATTRACTIONS</a></li>
+                <li><a href="#">ACCOMMODATION</a></li>
+            </ul>
+        </nav>
+      </header>
     </section>
     <section class="u-clearfix u-custom-color-2 u-section-2" id="sec-d62a">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
