--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <meta property="og:type" content="website">
   </head>
   <header>
-    <div class="logo"><a href="#"><img src="img/Bath_Bound_logo.svg" width="100px" height="100px"></a></div>
+    <div class="logo"><a href="#"><img src="Bath_Bound_logo.svg" width="100px" height="100px"></a></div>
     <nav class="nav">
         <ul>
             <li><a href="#">HOME</a></li>
@@ -35,26 +35,10 @@
             <li><a href="#">ACCOMMODATION</a></li>
         </ul>
     </nav>
-  </header>
-  <body data-home-page="https://website2591604.nicepage.io/about-us-1.html?version=3b28b287-8d23-48b5-a120-2f0a9bb59827" data-home-page-title="about us 1" class="u-body u-xl-mode" data-lang="en">
-    <section class="u-align-center u-clearfix u-image u-section-1" id="carousel_bb64" data-image-width="1440" data-image-height="1080">
-      <div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-custom-font u-font-playfair-display u-text u-text-default u-title u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="0">Welcome to Bath</h1>
-        <div class="u-expanded-width u-list u-list-1">
-          <div class="u-repeater u-repeater-1">
-            <div class="u-container-style u-list-item u-repeater-item">
-              <div class="u-container-layout u-similar-container u-container-layout-1"></div>
-            </div>
-            <div class="u-container-style u-list-item u-repeater-item">
-              <div class="u-container-layout u-similar-container u-container-layout-2"></div>
-            </div>
-            <div class="u-container-style u-list-item u-repeater-item">
-              <div class="u-container-layout u-similar-container u-container-layout-3"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+</header>
+<section>
+    <h1> Welcome to Bath </h1>
+</section>  
     <section class="u-clearfix u-custom-color-2 u-section-2" id="sec-d62a">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <div class="u-expanded-width u-list u-list-1">
