--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
 </header>
 <section>
     <h1> Welcome to Bath </h1>
+    <style>
+        p {
+          background-image: url('bathone.jpg');
+        }
+        </style>
 </section>  
     <section class="u-clearfix u-custom-color-2 u-section-2" id="sec-d62a">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
