--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="keywords" content="Medical Center">
     <meta name="description" content="">
-    <title>about us 1</title>
+    <title>bathhomepage</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="about-us-1.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery-1.9.1.min.js" defer=""></script>
@@ -22,7 +22,7 @@
 		"name": ""
 }</script>
     <meta name="theme-color" content="#478ac9">
-    <meta property="og:title" content="about us 1">
+    <meta property="og:title" content="bathhomepage">
     <meta property="og:type" content="website">
   </head>
   <header>
@@ -37,7 +37,7 @@
     </nav>
 </header>
 <section>
-    <h1> Welcome to Bath </h1>
+    <centre><h1> Welcome to Bath</h1></centre>
 </section>  
     <section class="u-clearfix u-custom-color-2 u-section-2" id="sec-d62a">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
