--- a/index.html
+++ b/index.html
@@ -36,24 +36,9 @@
         </ul>
     </nav>
 </header>
-<section class="u-align-center u-clearfix u-image u-section-1" id="carousel_bb64" data-image-width="1440" data-image-height="1080">
-    <div class="u-clearfix u-sheet u-sheet-1">
-      <h1 class="u-custom-font u-font-playfair-display u-text u-text-default u-title u-text-1" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="0">Welcome to Bath</h1>
-      <div class="u-expanded-width u-list u-list-1">
-        <div class="u-repeater u-repeater-1">
-          <div class="u-container-style u-list-item u-repeater-item">
-            <div class="u-container-layout u-similar-container u-container-layout-1"></div>
-          </div>
-          <div class="u-container-style u-list-item u-repeater-item">
-            <div class="u-container-layout u-similar-container u-container-layout-2"></div>
-          </div>
-          <div class="u-container-style u-list-item u-repeater-item">
-            <div class="u-container-layout u-similar-container u-container-layout-3"></div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section> 
+<section>
+    <centre><h1> Welcome to Bath</h1></centre>
+</section>  
     <section class="u-clearfix u-custom-color-2 u-section-2" id="sec-d62a">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <div class="u-expanded-width u-list u-list-1">
