--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </nav>
 </header>
 <section>
-    <centre><h1> Welcome to Bath</h1></centre>
+    <h1> Welcome to Bath</h1>
 </section>  
     <section class="u-clearfix u-custom-color-2 u-section-2" id="sec-d62a">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
