--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 </header>
 <section>
     <h1> Welcome to Bath</h1>
+    <img src="bathone.jpg">
+
 </section>  
     <section class="u-clearfix u-custom-color-2 u-section-2" id="sec-d62a">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
@@ -77,7 +79,6 @@
           <div class="u-container-layout u-container-layout-1">
             <h2 class="u-text u-text-body-color u-text-1"> Join Our Newsletter</h2>
             <div class="u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-form u-form-1">
-              <form action="//publish.nicepage.com/Form/Process" method="POST" class="u-clearfix u-form-spacing-21 u-form-vertical u-inner-form" source="email" name="form-1" style="padding: 1px;">
                 <div class="u-form-group u-form-name">
                   <label for="name-a736" class="u-label">Name</label>
                   <input type="text" placeholder="Enter your Name" id="name-a736" name="name" class="u-input u-input-rectangle u-palette-1-light-2 u-radius-12" required="">
