--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
     </nav>
 </header>
 <section>
-    <h1> Welcome to Bath</h1>
+<div>
+    <img src="bathone.jpg" style="height:150px; border-radius: 50%; padding-top:80px;">
+    <h1 style="font-size:100px; color:white; margin:10px;">Welcome to Bath</h1>
+</div>
 </section>  
     <section class="u-clearfix u-custom-color-2 u-section-2" id="sec-d62a">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
