--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 </header>
 <section>
 <div>
-    <img src="bathone.jpg" style="height:150px; border-radius: 50%; padding-top:80px;">
-    <h1 style="font-size:100px; color:white; margin:10px;">Welcome to Bath</h1>
+    <img src="bathone.jpg" style="height:350px; padding-top:80px;">
+    <h1 style="font-size:100px; color:white; margin:10px; background-color: #feefb9 ;">Welcome to Bath</h1>
 </div>
 </section>  
     <section class="u-clearfix u-custom-color-2 u-section-2" id="sec-d62a">
