--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </header>
 <section>
 <div>
-    <h1 style="font-size:100px; color:white; margin:10px; background-image: src=bathone.jpg; height:350px; ">Welcome to Bath</h1>
+    <h1 style="font-size:100px; color:red; margin:10px; background-image: src=bathone.jpg; height:350px; ">Welcome to Bath</h1>
 </div>
 </section>  
     <section class="u-clearfix u-custom-color-2 u-section-2" id="sec-d62a">
