--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 <section>
 <div>
     <h1 style="font-size:100px; color:black; margin:10px; background-color: #feefb9; height:150px; text-align: center; ">Welcome to Bath</h1>
+    <img src="bathone.jpg" alt="Bath">															
 </div>
 </section>  
     <section class="u-clearfix u-custom-color-2 u-section-2" id="sec-d62a">
