--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 </header>
 <section>
 <div>
-    <h1 style="font-size:100px; color:black; margin:10px; background-color: #feefb9; height:150px; text-align: center; ">Welcome to Bath</h1>
-    <img src="bathone.jpg" alt="Bath">															
+    <h1 style="font-size:100px; color:black; margin:10px; background-color: #feefb9; height:100px; text-align: center; ">Welcome to Bath</h1>
+    <img src="bathone.jpg" alt="Bath", class="center">															
 </div>
 </section>  
     <section class="u-clearfix u-custom-color-2 u-section-2" id="sec-d62a">
